--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -3,6 +3,10 @@
   border-bottom: 1px solid #1f1f1f;
 }
 
+:global(.light) .header {
+  border-color: #e1e1e1;
+}
+
 .container {
   display: flex;
   align-items: center;
